Fixed footer alignments on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ ul.twocolorderonline {
 
 
 
-/******** smaller than tablet - mobile *********/
+/******** smaller tablet - mobile *********/
 @media only screen and (max-width: 663px) {
 
     header, nav, .productlist, footer
@@ -560,10 +560,44 @@ ul.twocolorderonline {
     grid-template-columns: repeat(1, 1fr);
 }
 
-.footerlogo {
-    text-align: center;
-    margin-top: 0px;
+footer ul.footernavitems {
+    display: grid !important;
+     grid-auto-flow: row;
+     grid-template-columns: 50% 50%;
+     grid-template-rows: auto auto;
+     column-gap: 16px;
+     row-gap: 16px;
+ }
+ 
+ footer li#orderonline
+ {
+     grid-column: 1 / 3; /* spans columns 1 to 3 */
+     grid-row: 1;
+ 
+ }
+ 
+ ul.twocolorderonline {
+    grid-template-columns: 50% auto; 
+    column-gap: 16px;
 }
+ 
+ footer li#aboutus 
+ {
+     grid-column: 1;
+     grid-row: 2;
+ 
+ }
+ 
+ footer li#followus
+ {
+     grid-column: 2;
+     grid-row: 2;
+ }
+ 
+ .footerlogo {
+     text-align: center;
+     margin-top: 0px;
+ }
 
 
 button,
